--- a/asset/stylesheets/distt.css
+++ b/asset/stylesheets/distt.css
@@ -103,8 +103,23 @@ Container
 	height: 300px;
 }
 .container div h2{
+	    font-size: 40px;
 	text-align: left;
+	margin-bottom: -10px;
 }
 .container div p,iframe{
 	margin-top: 20px;
 }
+
+/*
+===========================
+Footer
+===========================
+*/
+.footer{
+	text-align: center;
+	background: #1f6b09;
+}
+.footer small{
+	font-size: 20px;
+ }
