--- a/asset/stylesheets/distt.css
+++ b/asset/stylesheets/distt.css
@@ -1,5 +1,11 @@
 
 body{
+	background: -moz-linear-gradient(left, rgba(181,250,181,1) 0%, rgba(181,250,181,1) 18%, rgba(85,255,150,1) 47%, rgba(42,255,150,1) 60%, rgba(190,250,181,1) 89%);
+ background: -webkit-gradient(left top, right top, color-stop(0%, rgba(181,250,181,1)), color-stop(18%, rgba(181,250,181,1)), color-stop(47%, rgba(85,255,150,1)), color-stop(60%, rgba(42,255,150,1)), color-stop(89%, rgba(190,250,181,1)));
+ background: -webkit-linear-gradient(left, rgba(181,250,181,1) 0%, rgba(181,250,181,1) 18%, rgba(85,255,150,1) 47%, rgba(42,255,150,1) 60%, rgba(190,250,181,1) 89%);
+ background: -o-linear-gradient(left, rgba(181,250,181,1) 0%, rgba(181,250,181,1) 18%, rgba(85,255,150,1) 47%, rgba(42,255,150,1) 60%, rgba(190,250,181,1) 89%);
+ background: -ms-linear-gradient(left, rgba(181,250,181,1) 0%, rgba(181,250,181,1) 18%, rgba(85,255,150,1) 47%, rgba(42,255,150,1) 60%, rgba(190,250,181,1) 89%);
+
 	
 	font-family: "helvetica neue",helvetica,arial,sans-serif;
 }
@@ -18,7 +24,8 @@ Navigation
     letter-spacing: 1px;
 }
 .navbar{
-	background: transparent;
+	background: #222;
+
 	
  }
 .navbar-default .navbar-header .navbar-right {
@@ -118,8 +125,11 @@ Footer
 */
 .footer{
 	text-align: center;
-	background: #1f6b09;
+
+ background: #222;
+ margin:0 89px;
 }
 .footer small{
 	font-size: 20px;
+	color: #999;
  }
