--- a/asset/stylesheets/style.css
+++ b/asset/stylesheets/style.css
@@ -93,7 +93,7 @@ Footer
 .footer{
 	text-align: center;
 	background: #222;
-	margin:0 104px;
+	
 }
 .footer small{
 	font-size: 20px;
@@ -132,7 +132,7 @@ Container
 	font-size: 20px;
 	padding-bottom: 10px;
 }
-.container img{
+.container .distt img{
 	height: 260px;
 	display: inline-block;
 	width: 38%;
@@ -154,7 +154,7 @@ html,body {
 	padding: 0;
 }
 .slider {
-	width: 1024px;
+	width: 100%;
 	margin: 2em auto;
 	
 }
@@ -178,3 +178,4 @@ html,body {
 .slider-wrapper > .slide:first-child {
 	opacity: 1;
 }
+
