--- a/asset/stylesheets/distt.css
+++ b/asset/stylesheets/distt.css
@@ -144,3 +144,19 @@ Footer
  .contact span{
  	color: #f00;
  }
+ @media only screen and (max-width: 700px) {
+    .jumbotron p{
+    	font-size: 17px;
+    	
+    	
+    	
+    }
+}
+@media only screen and (max-width: 700px) {
+    .container p{
+    	font-size: 15px;
+    	
+    	
+    	
+    }
+}
