--- a/asset/stylesheets/style.css
+++ b/asset/stylesheets/style.css
@@ -136,6 +136,7 @@ Container
 	height: 260px;
 	display: inline-block;
 	width: 38%;
+
  }
 .distt p{
 	margin:  0 15px;
@@ -144,6 +145,7 @@ Container
 	line-height: 25px;
     display: inline-block;
     width: 40%;
+    
 }
 .distt p,img{
 	display: inline-block;
@@ -187,8 +189,9 @@ html,body {
         display: initial;
     }
 }
-@media only screen and (max-width: 700px) {
+@media  all and (max-width: 700px) {
     .distt p,img{
+
     	width: 100%;    	
     }
 }
